クロック信号名の変更方法を説明

--- a/Verilog2WaveDrome.ipynb
+++ b/Verilog2WaveDrome.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMr0QJLZZnHtQQ3L1Dk47eb",
+      "authorship_tag": "ABX9TyMNCHuqDVAQFnyuY5fnltAh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UMy6zCUKrQBO",
-        "outputId": "b88f5452-3d78-45aa-bbad-31aac3c6239c"
+        "outputId": "26c63429-5a5f-40a9-b686-8bd0d623ea90"
       },
       "source": [
         "!apt install iverilog"
@@ -104,7 +104,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "r17tLjWUr0o2",
-        "outputId": "d4bce7fc-7cce-4b53-e1e6-8c3b45259dc1"
+        "outputId": "1d7391b5-ecd7-40d5-fbdb-3ca4376e79bd"
       },
       "source": [
         "verilog_source = \"\"\"\n",
@@ -179,7 +179,9 @@
       "source": [
         "## WaveDrome の生成\n",
         "\n",
-        "シミュレーションが実行できたら、以下のコードセルを実行し、表示されるURLをクリックしてください。"
+        "シミュレーションが実行できたら、以下のコードセルを実行し、表示されるURLをクリックしてください。\n",
+        "\n",
+        "クロック信号名を変えたい場合は、`CLOCK_NAME=\"clk\"` を修正してください。"
       ]
     },
     {
@@ -189,7 +191,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "83SeRUA1oDgU",
-        "outputId": "32774a6e-5141-445f-cc1a-4e2b7dd26c29"
+        "outputId": "3a9e93a9-ae42-4271-e52f-06217e662678"
       },
       "source": [
         "CLOCK_NAME=\"clk\"  # クロック信号\n",
