--- a/README.adoc
+++ b/README.adoc
@@ -20,17 +20,21 @@ v1.0, 2021-06-12
 :toc-title: 目次
 :warning-caption: 警告
 
-https://colab.research.google.com/github/miura-katsuyoshi/VerilogSimulation.ipynb/blob/main/VerilogSimulation.ipynb[Google Colaboratory で表示]
+https://colab.research.google.com/github/miura-katsuyoshi/VerilogSimulation.ipynb/blob/main/VerilogSimulation.ipynb[Matplotlib でグラフ表示（Google Colaboratory で表示）]
+
+https://colab.research.google.com/github/miura-katsuyoshi/VerilogSimulation.ipynb/blob/main/Verilog2WaveDrome.ipynb[[WaveDrome でグラフ表示（Google Colaboratory で表示）]
 
 ## 概要
 
-http://iverilog.icarus.com/[Icarus Verilog (iverilog)] でコンパイル＆実行し、 https://matplotlib.org/[Matplotlib] で波形表示する、Verilog HDL の簡易シミュレーション＆波形表示 Jupyter ノートブックです。
+http://iverilog.icarus.com/[Icarus Verilog (iverilog)] でコンパイル＆実行し、 https://matplotlib.org/[Matplotlib] あるいは https://wavedrom.com/[WaveDrome] で波形表示する、Verilog HDL の簡易シミュレーション＆波形表示 Jupyter ノートブックです。
 
 Google Colaboratory 上で、Verilog シミュレーションして、波形表示できます。実行するには、Google アカウントでのログインが必要です。
 
 ## 使い方
 
-. このノートブックを、 https://colab.research.google.com/github/miura-katsuyoshi/VerilogSimulation.ipynb/blob/main/VerilogSimulation.ipynb[Google Colaboratory で開きます]。
+. いずれかのノートブックを、Google Colaboratory で開きます。
+** https://colab.research.google.com/github/miura-katsuyoshi/VerilogSimulation.ipynb/blob/main/VerilogSimulation.ipynb[Matplotlib でグラフ表示（Google Colaboratory で表示）]
+** https://colab.research.google.com/github/miura-katsuyoshi/VerilogSimulation.ipynb/blob/main/Verilog2WaveDrome.ipynb[[WaveDrome でグラフ表示（Google Colaboratory で表示）]
 
 . ファイル -> ドライブにコピーを保存。
 +
